@@ -3,6 +3,7 @@ New Features in ComputerCraft 1.80:
 * Added .getResponseHeaders() to HTTP responses.
 * Return a HTTP response when a HTTP error occurs.
 * Added a GUI to change ComputerCraft config options
+* Monitors now give off light
 
 New Features in ComputerCraft 1.79:
 
